<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rozetka</string>
    <string name="action_settings">Settings</string>
    <string name="fragment_authorization_ivLogo">Logo</string>
    <string name="fragment_authorization_tvLogin">Login:</string>
    <string name="fragment_authorization_tvPassword">Password:</string>
    <string name="fragment_authorization_tvConfirm">Confirm:</string>
    <string name="fragment_authorization_btSingIn">Sing in</string>
    <string name="fragment_authorization_btRegistration">Registration</string>
    <string name="fragment_authorization_btSaveAndSingIn">Save &amp; Sing in</string>
    <string name="fragment_authorization_btCancel">Cancel</string>
    
    <string name="account_manager_invalid_login">Invalid login. Must be at least 3 simbols</string>
    <string name="account_manager_invalid_password">Invalid password. Must be at least 4 simbols</string>
    <string name="account_manager_login_already_exists">Login already exists</string>
    <string name="account_manager_login_is_not_found">Such login is not found</string>
    <string name="account_manager_wrong_password">Wrong password</string>
    <string name="account_manager_password_is_not_confirm">Password is not confirm</string>
    <string name="account_manager_success">Success</string>
    
   <string name="item_laptop_title">Title</string>
    <string name="item_laptop_price">Price</string>
   
    <string name="laptop_manufacturer_acer">Acer</string>
    <string name="laptop_manufacturer_apple">Apple</string>
    <string name="laptop_manufacturer_asus">Asus</string>
    <string name="laptop_manufacturer_dell">Dell</string>
    <string name="laptop_manufacturer_fujitsu">Fujitsu</string>
    <string name="laptop_manufacturer_gigabyte">Gigabyte</string>
    <string name="laptop_manufacturer_hp">HP</string>
    <string name="laptop_manufacturer_impression">Impression</string>
    <string name="laptop_manufacturer_lenovo">Lenovo</string>
    <string name="laptop_manufacturer_msi">MSI</string>
    
    <string name="laptop_screen_size_from_9_to_10">9\"-10\"</string>
    <string name="laptop_screen_size_from_11_to_12_5">11\"-12.5\"</string>
    <string name="laptop_screen_size_13">13\"</string>
    <string name="laptop_screen_size_from_14_to_15_6">14\"-15.6\"</string>
    <string name="laptop_screen_size_from_16_to_17">16\"-17\"</string>
    <string name="laptop_screen_size_from_18_to_20">18\"-20\"</string>
     
      <string name="laptop_screen_resolution_1024_600">1024 x 600</string>
      <string name="laptop_screen_resolution_1366_768">1366 x 768</string>
      <string name="laptop_screen_resolution_1440_900">1440 x 900</string>
      <string name="laptop_screen_resolution_1600_900">1600 x 900</string>
      <string name="laptop_screen_resolution_full_hd">Full HD</string>
      <string name="laptop_screen_resolution_bigger_than_fhd">Bigger than FHD</string>
   

</resources>