<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/authorization_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/fragment_authorization_ivLogo"
        android:src="@drawable/authorization_logo" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/fragment_authorization_tvLogin"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/fragment_authorization_etLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/fragment_authorization_tvPassword"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/fragment_authorization_etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </TableRow>
    </TableLayout>

    <TableRow
        android:id="@+id/fragment_authorization_trConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/fragment_authorization_tvConfirm"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fragment_authorization_etConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" >

            <requestFocus />
        </EditText>
    </TableRow>

    <Button
        android:id="@+id/fragment_authorization_btFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_authorization_btSingIn"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <Button
        android:id="@+id/fragment_authorization_btSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_authorization_btRegistration"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

</LinearLayout>